Styles/index.css
* {
    padding: 0;
    margin: 0; 
    box-sizing: border-box;
}

/* Header & Hero Section */

.main-head {
    min-height: 100vh;
    background-image: url(../img/hero-background.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: white;
}

.main-title {
    font-family: "Josefin Sans", sans-serif;
    font-style: normal;
    font-weight: bold;
    font-size: 48px;
    line-height: 26px;
    letter-spacing: 4.8px;
    padding: 15px 0;
}

.main-second-title {
    font-family: "Josefin Sans", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 22px;
    line-height: 26px;
    letter-spacing: 6.82px;
    padding: 15px 0;
}

.searchbar {
    width: 650px;
    display:flex;
    justify-content: center;
    align-items: center;
}

.searchbar-text {
    max-width: 480px;
    width: 100%;
    height: 61px;
    border: none;
    font-size: 14px;
    color: black;
    text-align: center;
}

input::placeholder {
    font-family: "Josefin Sans", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 26px;
    color: #999999;
}

.searchbar-btn {
    max-width: 153px;
    width: 100%;
    height: 63px;
    background-color: blue;
    font-family: "Aleo", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 26px;
    color: white;
    border: white 2px solid;
    /* I can't get the btn to align perfectly with the input field */
}

.searchbar-btn:hover {
    color: #333333;
    cursor: pointer;
}

.header-scroll {
    position: absolute;
    left: 50%;
    bottom: 15%;
    transform: translate(-50%, -15%);
}

.header-scroll a {
    text-decoration: none;
    font-family: "Josefin Sans", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 26px;
    color: #FFFFFF;
}

.header-scroll a:hover {
    font-size: 15px; 
}

/* Nav */

#main-nav {
    width: 100%;
    min-height: 10vh;
    background-color: #5474FD;
    display: flex;
    align-items: center;
}

.nav-container {
    width: 70%;
    margin: auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
}

.logo {
    font-family: "Josefin Sans", sans-serif;
    font-style: normal;
    font-weight: bold;
    font-size: 24px;
    line-height: 26px;
    color: white;
}

.nav-links {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

nav a {
    font-family: "Aleo", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 14px;
    line-height: 26px;
    color: white;
    text-decoration: none;
}

nav a:hover {
    color: #333333;
}

nav li {
    list-style-type: none;
    padding-left: 40px;
}

/* Why Choose Us */

.why-choose-us {
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url(../img/bg-why.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.why-container {
    width: 80%;
    margin: auto;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.why-info {
    max-width: 600px;
}

.why-info h2 {
    font-family: "Aleo", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 36px;
    line-height: 26px;
    margin-bottom: 20px;
    color:#FFFFFF;
}

.why-info p {
    font-family: "Josefin Sans", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 26px;
    color: #E8E8E8;
    padding: 20px 0px;
}

.why-pictures {
    display: flex;
    flex-direction: column;
}

.why-picture-1 {
    position: absolute;
    right: 15%;
    top: 15%;
}
.why-picture-2 {
    position: absolute;
    right: 8%;
    top: 46%;
}

.why-choose-btn {
    padding: 12px 25px;
    margin-top: 20px;
    color: white;
    background: #5474FD;
    border: 0.5px solid #5474FD;
    outline: none;
    font-family: "Aleo", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 26px;
}

.why-choose-btn:hover {
    color: #333333;
    cursor: pointer;
}

/* Icon Section */

.icon-section {
    width: 100%;
    min-height: 40vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #333333;
}

.icon-container {
    width: 80%;
    margin: auto;
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
}

.icons {
    text-align: center;
}

.icons h3{
    font-family: "Aleo", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 36px;
    line-height: 26px;
    color: #E8E8E8;
    margin-top: 30px;
}

/* Destination Section */

.destination-container {
    width: 100%;
    min-height: 90vh;
    position: relative; 
    background-image: url(../img/bg-destination-1.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.destination-container-2 {
    width: 100%;
    min-height: 90vh;
    position: relative; 
    background-image: url(../img/bg-destination-2.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.destination-box {
    position: absolute;
    bottom: 0;
    left: 15%;
    max-width: 534px;
    margin-bottom: 80px;
    margin-right: 200px;
    color: white;
    padding: 60px 30px;
    background: #232323;
    mix-blend-mode: normal;
    opacity: 0.9;
}

.destination-box-2 {
    position: absolute;
    bottom: 0;
    right: 0%;
    max-width: 534px;
    margin-bottom: 80px;
    margin-right: 200px;
    color: white;
    padding: 60px 30px;
    background: #232323;
    mix-blend-mode: normal;
    opacity: 0.9;
}

.country {
    font-family: "Josefin Sans", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 20px;
    line-height: 26px;
    color: #E8E8E8;
    padding: 10px 0px;
}

.destination-country {
    font-family: "Josefin Sans", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 20px;
    line-height: 26px;
    color: #FFFFFF;
    padding: 10px 0px;
}

.destination-text {
    font-family: "Josefin Sans", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 26px;
    color: #E8E8E8;
    padding: 10px 0px;
}

.destination-btn {
    padding: 12px 25px;
    margin-top: 20px;
    color: white;
    background: #5474FD;
    border: 0.5px solid #5474FD;
    outline: none;
    font-family: "Aleo", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 26px;
}

.destination-btn:hover {
    color: #333333;
    cursor: pointer;
}

/* Testimonials */

.testimonials {
    background-image: url(../img/man-hat.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 90vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.testimonials-wrapper {
    display: flex;
    align-items: center;
    justify-content: center; 
    flex-wrap: wrap;
}

.testimonials-box {
    width: 668px;
    height: 284.5px;
    padding: 0 30px;
    color: white;
    background-color:#333333;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.testimonials-pic {
    background-size: cover;
    height: 284.5px;
}

.testimonials-quote {
    font-family: "Josefin Sans", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 26px;
    color: #E8E8E8;
}

.fas.fa-quote-left {
    font-size: 30px;
    color: #5474FD;
    margin-right: 10px; 
}

.sam {
    font-family: "Josefin Sans", sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 20px;
    line-height: 26px;
    color: #FEFEFE;
}

/* Footer */

footer {
    width: 100%;
    background: #232323;
    min-height: 20vh;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.black-space {
    min-height: 3vh;
}

.footer-logo {
    font-family: 'Josefin Sans', sans-serif;
    font-style: normal;
    font-weight: bold;
    font-size: 24px;
    line-height: 26px;
    letter-spacing: 2.4px;
    color: #FFFFFF;
    margin-top: 50px;
    margin-bottom: 10px;
}

.footer-slogan {
    font-family: 'Josefin Sans', sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 26px;
    display: flex;
    align-items: center;
    text-align: center;
    letter-spacing: 1.6px;
    color: #FFFFFF;
    padding-bottom: 20px;
}

.footer-icons {
   padding-bottom: 40px;
}

.fab.fa-linkedin-in {
    color: #FFFFFF;
    margin-right: 20px;
}

.fab.fa-linkedin-in:hover {
    color: #5474FD;
    cursor: pointer;
    font-size: 30px;
}

.fab.fa-facebook-f {
    color: #FFFFFF;
    margin-right: 20px;
}

.fab.fa-facebook-f:hover {
    color: #5474FD;
    cursor: pointer;
    font-size: 30px;
}

.fab.fa-twitter {
    color: #FFFFFF;
    margin-right: 20px;
}

.fab.fa-twitter:hover {
    color: #5474FD;
    cursor: pointer;
    font-size: 30px;
}

.fab.fa-youtube{
    color: #FFFFFF;
    margin-right: 20px;
}

.fab.fa-youtube:hover {
    color: #5474FD;
    cursor: pointer;
    font-size: 30px;
}

.fab.fa-pinterest{
    color: #FFFFFF;
}

.fab.fa-pinterest:hover {
    color: #5474FD;
    cursor: pointer;
    font-size: 30px;
}

